--- a/prometheus/tasks/main.yml
+++ b/prometheus/tasks/main.yml
@@ -1,8 +1,9 @@
----
+
 - name: Include docker&npm.yml
   include_tasks: docker&npm.yml
 
 - name: Include prometheus.yml
   include_tasks: prometheus.yml
 
-
+- name: node_exporter
+  include_tasks: node_exporter.yml
